k8s/dmarzi-xlb-canary/service-common.yml
apiVersion: v1
kind: Service
metadata:
  name: store-common-svc
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": "store-common-svc"}}}'
spec:
  selector:
    app: store
  ports:
  - port: 8080
    targetPort: 8080
