k8s/dmarzi-xlb-canary/gateway.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: external-store-http
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
