k8s/dmarzi-xlb-canary/external-store-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: external-store
  labels:
    gateway: external-store-http
spec:
  parentRefs:
  - name: external-store-http
  hostnames:
  - "store.example.io"
  - "store-bifido.palladius.it"
  rules:
  - backendRefs:
    - name: store-common-svc
      port: 8080
  - matches:
    - path:
        value: /v2
    backendRefs:
    - name: store-v2
      port: 8080
  - matches:
    - path:
        value: /v1
    backendRefs:
    - name: store-v1
      port: 8080
