k8s/dmarzi-xlb-canary/ricc-store.palladius.it-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: ricc-external-store-http
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: ricc-external-store
  labels:
    gateway: ricc-external-store-http
spec:
  parentRefs:
  - name: ricc-external-store-http
  hostnames:
  - "ricc-store.palladius.it"
  rules:
  - matches:
    - path:
        value: /storev1
    backendRefs:
    - name: store-v1
      port: 8080
  - matches:
    - path:
        value: /storev2
    backendRefs:
    - name: store-v2
      port: 8080
  - matches:
    - path:
        value: /
    backendRefs:
    - name: app02-kuruby-canary
      port: 8080
